# app-single-instance

./: Cargo.toml  LICENSE  README.md
.github/workflows/: publish.yml
examples/: egui.rs
src/: lib.rs  listener.rs  socket.rs
