[package]
name = "app-single-instance"
version = "0.1.0"
edition = "2024"
description = "A lightweight single-instance library for desktop applications."
license = "MIT"
readme = "README.md"

[dependencies]
interprocess = "2"

[dev-dependencies]
eframe = "0.33.3"

[target.'cfg(target_os = "macos")'.dev-dependencies]
objc2 = "0.6.3"
objc2-app-kit = "0.3.2"